@@ -1,0 +1,22 @@
+RDUP DESIGN DOC
+
+
+crawler
+
+        the crawler decends into the directories.
+
+        When a .nobackup is found the entry's value is changed
+        from VALUE to NO_PRINT. The functions that write the
+        list know that NO_PRINT values should not be written
+        nor printed. 
+        (The entry could no simple be removed, becaused that
+        messed up the GTree).
+
+        So in rdup each item (a path) can have three values:
+        NULL - initial value, used by GTree to signal 'not found'
+        VALUE - rdup uses this to differentiate between 'not found'
+                and found items
+        NO_PRINT - don't print items with these values
+
+
+list from disk
