@@ -35,7 +35,7 @@ Alternate backup directory. Defaults to /vol/backup/`hostname`.
 .TP
 .B \-d
 The \d option causes diff(1) \-u to be run for each adjacent pair of
-dump files. This is not yet implemented.
+dump files. 
 .B \-z
 The backupped file is gzipped
 .TP
